Fixed issue with <code> that did not word-wrap when displayed on mobile. Now wrapping mid word if needed

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -475,3 +475,8 @@ ol li {
     text-indent: 0.0em;
     margin-left: 1.4em;
 }
+
+code {
+    word-wrap: break-word;
+    white-space: pre-wrap;
+}
